# day3_rpa

./: .gitignore  CLAUDE.md  README.md  handoff.md
.claude/skills/code-review/: SKILL.md
.claude/skills/git-commit/: SKILL.md
.claude/skills/skill-creator/: SKILL.md
.github/workflows/: deploy-pages.yml
backend/: .env.example  main.py  pyproject.toml
backend/app/: chatbot.py  db.py  documents.py  excel.py  main.py  members.py  news.py  schedule.py  scheduler.py
docs/: PRD.md  architecture.md  index.html  operation.md
frontend/: .env.example  index.html  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  config.ts  index.css  types.ts  vite-env.d.ts
frontend/src/components/: DocumentDetailView.tsx  DocumentForm.tsx  PageHeader.tsx  icons.tsx
frontend/src/features/approval/: ApprovalPage.tsx
frontend/src/features/chatbot/: ChatbotPage.tsx
frontend/src/features/excel/: ExcelPage.tsx
frontend/src/features/news/: NewsPage.tsx
frontend/src/features/schedule/: SchedulePage.tsx
